t+tl:[[hanapin]] ([[WT:EDIT|Assisted]]) <find#50090364>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -187,6 +187,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 *: Lower Sorbian: {{t|dsb|namakaś|pf}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t+|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t+|sv|utröna}}
+* Tagalog: {{t|tl|hanapin}}
 * Tajik: {{t+|tg|ёфтан|sc=Cyrl}}, {{t+|tg|пайдо кардан|sc=Cyrl}}
 * Tatar: {{t+|tt|табарга|sc=Cyrl}}
 * Thai: {{t+|th|พบ}}, {{t+|th|เจอ}}
