--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -20,7 +20,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 
 ====Usage notes====
 * Unlike "[[etc.]]", "e.g." is very seldom read as a full Latin phrase. Like "[[i.e.]]", it is typically read out as its English [[calque]] ("[[for example]]") or as its letters ("E-G"). It is also sometimes taught or glossed as "example given" for the benefit of English speakers.
-* "E.g." and its examples are typically set off from the rest of the sentence by punctuation. In US English, "e.g." sometimes will be followed by a comma. However, usually it is not, and it is never followed by a comma in the rest of the world.
+* "E.g." and its examples are typically set off from the rest of the sentence by punctuation. In US English, "e.g." sometimes will be followed by a comma. However, usually it is not, and it is never followed by a comma in other English-speaking parts.
 :: {{a|UK}} ''I like sweet foods, e.g. [[danish]]es.''
 :: {{a|US}} ''I like sweet foods (e.g. [[marzipan]]) but brush regularly.''
 :: {{a|rare|US}} ''I like sweet foods (e.g., [[marzipan]]) but brush regularly.''
