--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -528,6 +528,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Estonian: {{t|et|mäng}}
 * Ewe: {{t|ee|fefe}}
 * Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
+* Friuli: {{t+|fur|zogho}m}
 * French: {{t+|fr|jeu|m}}
 * Galician: {{t|gl|xogo|m}}
 * Georgian: {{t|ka|თამაში}}
