t+tl:[[magpunta]] ([[WT:EDIT|Assisted]]) <come#50100583>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -284,7 +284,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Swahili: {{t|sw|kuja}}
 * Swedish: {{t+|sv|komma}}
 * Sylheti: {{t|syl|ꠀꠃꠣ}}
-* Tagalog: {{t|tl|pumunta}}
+* Tagalog: {{t|tl|pumunta}}, {{t|tl|magpunta}}
 * Tajik: {{t+|tg|омадан}}
 * Tamil: {{t+|ta|வா}}
 * Tatar: {{t+|tt|килергә}}
