--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -436,6 +436,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Maori: {{t|mi|herenga aho}}
 * Persian: {{t+|fa|خرک|tr=xarak|sc=fa-Arab}}
 * Portuguese: {{t+|pt|cavalete|m}}
+* Thai: {{t|th|หย่อง}}, {{t|th|ซุ้ม}}
 * Zazaki: {{t|zza|pırdek|c}}
 {{trans-bottom}}
 
