t+tl:[[kurtina]] ([[WT:EDIT|Assisted]]) <curtain#50112824>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -128,6 +128,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Spanish: {{t+|es|cortina|f}}
 * Swahili: {{t+|sw|pazia}}
 * Swedish: {{t+|sv|gardin|c}}
+* Tagalog: {{t|tl|kurtina}}
 * Tajik: {{t+|tg|парда|sc=Cyrl}}
 * Tamil: {{t+|ta|திரைச்சீலை}}
 * Tatar: {{t+|tt|пәрдә}}
