--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -218,7 +218,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Galician: {{t+|gl|fatón|m}}, {{t+|gl|ameixa|f}}, {{t|gl|buíña|f}}, {{t|gl|ambruíña|f}}, {{t+|gl|gruño|m}}, {{t+|gl|agruño|m}}, {{t|gl|cerollo|m}}, {{t|gl|eixola|f}}, {{t+|gl|níxaro|m}}
 * Georgian: {{t|ka|ქლიავი}}
 * German: {{t+|de|Pflaume|f}}, {{t+|de|Zwetschge|f}}
-*: Alemannic German: {{t|gsw|Flûme|f}}
+*: Alemannic German: {{t|gsw|Fluume|f}}
 * Greek: {{t+|el|δαμάσκηνο|n}}
 *: Ancient Greek: {{t|grc|προῦμνον|n}}
 * Hebrew: {{t+|he|שְׁזִיף|m|tr=sh'zíf|sc=Hebr}}
