--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -123,6 +123,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Norman: {{t|nrf|fliotter}}
 * Portuguese: {{t+|pt|flutuar}}, {{t+|pt|boiar}}
 * Russian: {{t|ru|[[держа́ться]] [[на]] [[вода|воде́]]}}
+* Serbo-Croatian: {{t+|sh|plutati|impf}}
 * Spanish: {{t+|es|flotar}}
 * Sundanese: {{t|su|ngambang}}
 * Swedish: {{t+|sv|flyta}}
