--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -144,7 +144,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Norman: {{t|nrf|fliotter}}
 * Portuguese: {{t+|pt|flutuar}}, {{t+|pt|pairar}}
 * Russian: {{t+|ru|пари́ть|impf}}, {{t+|ru|плыть|impf}}
-* Serbo-Croatian: {{t+|sh|lebdjeti}}
+* Serbo-Croatian: {{t+|sh|lebdjeti}}, {{t+|sh|letjeti}}, {{t+|sh|odletjeti}}
 * Spanish: {{t+|es|flotar}}
 * Swedish: {{t+|sv|sväva}}
 * Yiddish: {{t|yi|שוועבן}}
