t+sh:[[ploviti]] ([[WT:EDIT|Assisted]]) <float#50125485>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -173,6 +173,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-mid}}
 * Lithuanian: {{t|lt|tekėti|impf}}
 * Norman: {{t|nrf|fliotter}}
+* Serbo-Croatian: {{t+|sh|ploviti}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
