--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -180,6 +180,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-top|to drift aimlessly}}
 * Maori: {{t|mi|whakatairangi}}
 {{trans-mid}}
+* Serbo-Croatian: {{t+|sh|muvati se}}, {{t+|sh|tumarati}}, {{t|sh|besciljno se kretati}}, {{t+|sh|motati se}}
 {{trans-bottom}}
 
 {{trans-top|to automatically adjust a parameter as related parameters change}}
@@ -202,6 +203,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-mid}}
 * German: {{t+|de|vorschlagen}}
 * Japanese: {{t+|ja|浮かぶ|tr=ukabu}}
+* Serbo-Croatian: {{t+|sh|predložiti}}, {{t+|sh|baciti}}
 {{trans-bottom}}
 
 {{trans-top|to extend a short-term loan to}}
