/* Derived terms */ <fight#50128185>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -61,6 +61,9 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 | {{l|en|infight}}
 }}
 
+====Descendants====
+* {{desc|srn|feti|bor=1}}
+
 ====Translations====
 {{trans-top|(intransitive) to contend in physical conflict}}
 * Afrikaans: {{t+|af|stryd}}
