--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -179,7 +179,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Urdu: {{t|ur|گرج|tr=garaj|sc=ur-Arab}}, {{t|ur|گڑگڑاہٹ|tr=gaṛgaṛāhaṭ|sc=ur-Arab}}
 * Uzbek: {{t+|uz|momaqaldiroq}}
 * Venetian: {{t+|vec|ton|m}}
-* Vietnamese: {{t+|vi|sấm}}, {{t+|vi|sét}}
+* Vietnamese: {{t+|vi|sấm}}
 * Volapük: {{t|vo|töt}}
 * Walloon: {{t+|wa|tonire|f}}, {{t+|wa|tonoere|f}}
 * Waray-Waray: {{t|war|dalugdog}}
