--- a/en/旪/旪.16914.wikitext
+++ b/en/旪/旪.16914.wikitext
@@ -13,7 +13,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|曰|十}}. <!-- Refer Shuowen -->
+{{Han compound|曰|十|ls=ic|t1=to speak|t2=ten}}.
 
 ===Definitions===
 {{zh-see|協|ha}}
