t+zza:[[hebur]] t+zza:[[port]] ([[WT:EDIT|Assisted]]) <port#50129936>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -165,6 +165,7 @@ From {{der|en|ang|port}}, from {{der|en|la|portus||port, harbour}}, ultimately f
 * Welsh: {{t+|cy|porth|f}}
 * Yami: {{t|tao|minato}}
 * Yiddish: {{t|yi|האַוון|m}}, {{t|yi|פּאָרט}}
+* Zazaki: {{t|zza|hebur|m}}
 {{trans-bottom}}
 
 {{trans-see|port city}}
@@ -323,6 +324,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 * Turkish: {{t+|tr|port}}
 * Ukrainian: {{t|uk|порт|m|sc=Cyrl}}
 * Vietnamese: {{t+|vi|cổng}}
+* Zazaki: {{t|zza|port|c}}
 {{trans-bottom}}
 
 ===Etymology 3===
