--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -21,8 +21,10 @@
 
 =====Translations=====
 {{trans-top|picked}}
-* Swedish: {{t+|sv|vald}}
+* Greek:
+*: Ancient Greek: {{t|grc|ἐκλεκτός}}
 {{trans-mid}}
+* Swedish: {{t+|sv|vald}}
 {{trans-bottom}}
 
 {{trans-top|elected}}
