--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -24,9 +24,12 @@
 {{zh-hanzi}}
 
 # {{lb|zh|Suzhou|_|Wu}} [[you]] {{gloss|singular}}
+# {{lb|zh|Muping|_|Mandarin}} [[you]] {{gloss|plural}}
+# {{lb|zh|Muping|_|Mandarin}} [[your]]
 
 ====Synonyms====
 {{zh-dial|你}}
+{{zh-dial|你們}}
 
 ----
 
