--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -14,7 +14,7 @@
 
 ===Etymology===
 ; Suzhou Wu “you”
-: From {{ltc-l|爾}}.
+: From {{ltc-l|爾}} ({{zh-ref|You, 1995}}).
 
 ===Pronunciation===
 {{zh-pron
