/* English */ quotations <saffron#50136102>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -13,12 +13,16 @@ From {{inh|en|enm|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safra
 {{en-noun|~}}
 
 # The plant ''[[Crocus sativus]]'', a [[crocus]].
+#* '''1611''', ''{{w|King James Version}} of the {{w|Bible}}'', {{w|Song of Songs}} 4.13-14,<sup>[https://www.biblegateway.com/passage/?search=Song%20of%20Solomon+4&version=KJV]</sup>
+#*: Thy plants are an orchard of pomegranates, with pleasant fruits; camphire, with spikenard, spikenard and '''saffron''' {{...}}
 #* '''2009''', D. H. Sanaeinejad, S. N. Hosseini, ''Regression Models for '''Saffron''' Yields in Iran'', Daoliang Li, Chunjiang Zhao (editors), ''Computer and Computing Technologies in Agriculture II'', Volume 1, [http://books.google.com.au/books?id=DybQsneDddYC&pg=PA510&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 510],
 #*: Usually the maximum temperature for October, November and December in the southern parts of Khorassan–the main '''saffron''' growing area of the Iran-does not exceed 20°C, while the minimum temperature reaches 0°C.
 # A [[spice]] ([[seasoning]]) and colouring agent made from the [[stigma]] and part of the [[style]] of the plant, sometimes or formerly also used as a dye and insect repellent.
 #: {{syn|en|kesar}}
 #* '''c. 1430''' (reprinted '''1888'''), Thomas Austin, ed., ''Two Fifteenth-century Cookery-books. Harleian ms. 279 (ab. 1430), & Harl. ms. 4016 (ab. 1450), with Extracts from Ashmole ms. 1429, Laud ms. 553, & Douce ms. 55'' [Early English Text Society, Original Series; 91], London: [[w:Routledge|N. Trübner & Co.]] for the {{w|Early English Text Society}}, volume I, <small>[[w:Online Computer Library Center|OCLC]] [http://worldcat.org/oclc/374760 374760]</small>, page 11:
 #*: Soupes dorye. — Take gode almaunde mylke {{...}} caste þher-to '''Safroun''' an Salt {{...}}
+#* {{circa|1610}} {{w|William Shakespeare}}, ''{{w|The Winter's Tale|The Winter’s Tale}}'', Act IV, Scene 3,<sup>[http://www.opensourceshakespeare.org/views/plays/play_view.php?WorkID=winterstale&Scope=entire&pleasewait=1&msg=pl]</sup>
+#*: I must have '''saffron''' to colour the [[warden]] pies {{...}}
 #* '''1658''', [[w:Thomas Muffet|Thomas Muffet]], ''The Theatre of Insects'', [1634, ''Insectorum sive Minimorum Animalium Theatrum''], quoted in '''2008''', Anna Suranyi, ''The Genius of the English Nation: Travel Writing and National Identity in Early Modern England'', [http://books.google.com.au/books?id=DcV8ZE6uz7MC&pg=PA118&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 117-118],
 #*: The Irish and Ireland people (who are frequently troubled with lice, and such as will fly, as they say, in summer) anoint their shirts with '''saffron''', and to very good purpose, to drive away the lice, but after six months they wash their shirts again, putting fresh '''saffron''' into the lye.
 #* {{quote-text|year=2002|author=James A. Duke (editor)|title=CRC Handbook of Medicinal Spices|page=129|url=http://books.google.com.au/books?id=g_OCl6P0vsYC&pg=PA129&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false|passage='''Saffron''' is not included in American and British pharmacopoeias, but some Indian medical formulae still include it.}}
@@ -28,6 +32,12 @@ From {{inh|en|enm|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safra
 # An [[orange]]-[[yellow]] [[colour]], the colour of a lion's pelt.
 #: {{syn|en|saffron yellow}}
 #: {{color panel|F4C430}}
+#* '''1728''', {{w|James Thomson (poet, born 1834)|James Thomson}}, ''Spring'', London: A. Millar & G. Strahan, p.{{nbsp}}18,<sup>[http://name.umdl.umich.edu/004808172.0001.000]</sup>
+#*: {{...}} The stately Ram
+#*: Shone thro’ the Mead, in native Purple clad,
+#*: Or milder '''Saffron''' {{...}}
+#* '''1915''', {{w|Lucy Maud Montgomery}}, ''{{w|Anne of the Island}}'', Chapter{{nbsp}}7,<sup>[http://www.gutenberg.org/files/51/51-h/51-h.htm]</sup>
+#*: {{...}} the girls locked up Echo Lodge again and went away in the perfect half hour that follows the rose and '''saffron''' of a winter sunset.
 #* {{quote-text|year=1973|author=Anthony Powell|title={{w|Temporary Kings}}|page=82|url=http://books.google.com.au/books?id=1vHrhepiZ7MC&pg=PA82&dq=%22saffrons%22&hl=en&sa=X&ei=ZkOHU5iBDMWnkgWd8IGoBA&redir_esc=y#v=onepage&q=%22saffrons%22&f=false|passage=These colours might have been expressly designed—by dissonance as much as harmony—for juxtaposition against those pouring down in brilliant rays of light from the Tiepolo; subtle yet penetrating pinks and greys, light blue turning almost to lavender, rich '''saffrons''' and cinnamons melting into bronze and gold.}}
 #* '''2011''', Seth Hunter, ''The Winds of Folly'', [http://books.google.com.au/books?id=OKVsPY6RjtgC&pg=PT127&dq=%22saffrons%22&hl=en&sa=X&ei=ZkOHU5iBDMWnkgWd8IGoBA&redir_esc=y#v=onepage&q=%22saffrons%22&f=false unnumbered page],
 #*: The classical shades of Antiquity were the most prevalent, but along with the Venetian reds and Egyptian blues, the '''saffrons''' and ochres and indigos, were more delicate hues: of pink and cream and lilac, like shells littered upon the shore.
@@ -231,6 +241,18 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 {{en-adj|?}}
 
 # Having an orange-yellow colour.
+#: ''The '''saffron''' robe of a Buddhist monk.''
+#* '''1624''', {{w|Thomas Heywood}}, ''Gynaikeion: or, Nine Bookes of Various History. Concerninge women inscribed by the names of the nine Muses'', London, Book 3, “A Funerall Oade vpon the death of Anna Panareta” p.{{nbsp}}123,<sup>[http://name.umdl.umich.edu/A03206.0001.001]</sup>
+#*: Now ''{{w|Hymen (god)|Hymen}}'' change thy '''saffron''' weedes
+#*: To roabe and habit sable:
+#*: For ioyfull thoughts, vse funerall deedes
+#*: Since nothing’s firme or stable;
+#* '''1794''', {{w|Ann Radcliffe}}, ''{{w|The Mysteries of Udolpho}}'', London: G.G. & J. Robinson, Volume 1, Chapter 9, p.{{nbsp}}256,<sup>[http://name.umdl.umich.edu/004837676.0001.001]</sup>
+#*: The sun was now set; but, under the dark branches of the almond trees, was seen the '''saffron''' glow of the west, spreading beyond the twilight of middle air.
+#* '''1876''', {{w|George Eliot}}, ''{{w|Daniel Deronda}}'', Chapter{{nbsp}}40,<sup>[http://www.gutenberg.org/cache/epub/7469/pg7469-images.html]</sup>
+#*: {{...}} it was half-past four, and the gray day was dying gloriously, its western clouds all broken into narrowing purple strata before a wide-spreading '''saffron''' clearness {{...}}
+#* '''1961''', {{w|V. S. Naipaul}}, ''{{w|A House for Mr Biswas}}'', Part 1, Chapter{{nbsp}}2,<sup>[https://archive.org/details/in.ernet.dli.2015.149342]</sup>
+#*: The jacket was brown but had turned '''saffron''' where it had been soaked by Lal’s sweat.
 
 ====Translations====
 {{trans-top|having an orange-yellow colour}}
