--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -276,6 +276,9 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 {{en-verb}}
 
 # To add saffron to, for taste, colour etc.
+# {{lb|en|figuratively}} To [[embellish]].
+#* {{quote-book|title=Tennessee Legends: An Analysis in Terms of Motifs, Structure, and Style|author=Robert Randolph Turner|year=1970|passage='''Saffroning''' the rest of the account are several other regionalisms: agin for against , hit for the expletive it, knowed as a preterite, and no use to say not bin' (a fascinating doubling of the negative).}}
+#* {{quote-book|title=Chaucerian Fiction|page=231|author=Robert B. Burlin|year=2015|passage=The Nun's Priest's rhetorical devices, too numerous to catalogue exhaustively, are of two kinds: first, the heroic-historical, beginning with the setting of the occasion in a time sequence that starts with the Creation, '''saffroning''' the high points with apostrophes and epic similes, and culminating with a chase in which Chauntecleer's fall proves to have the "cosmic reverberations" required by epic standards {{...}}}}
 
 ====Translations====
 {{trans-top|to add saffron to}}
