--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -246,6 +246,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Hebrew: {{t+|he|חֶמְאָה|f|tr=khem'a}}
 * Hindi: {{t+|hi|घी|m}}, {{t+|hi|मक्खन|m}}, {{t+|hi|माखन}}
 * Hungarian: {{t+|hu|vaj}}
+* Hunsrik: {{t|hrx|Butter|f}}
 * Icelandic: {{t+|is|smjör|n}}
 * Ido: {{t+|io|butro}}
 * Indonesian: {{t+|id|mentega}}
