--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -74,14 +74,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 #:: '''Free''' time.
 
 ====Derived terms====
-{{der-top}}
-* {{l|fr|champ libre}}
-* {{l|fr|libre arbitre}}
-* {{l|fr|licence libre}}
-{{der-mid}}
-* {{l|fr|logiciel libre}}
-* {{l|fr|papier libre}}
-{{der-bottom}}
+{{der4|lang=fr|champ libre|libre arbitre|libre-échange|libre-examen|libre-service|licence libre|logiciel libre|papier libre}}
 
 ===Further reading===
 * {{R:TLFi}}
