--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -35,8 +35,8 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 |h=pfs=chó
 |md=cā/cō̤
 |md_note=cā - vernacular; cō̤ - literary
-|mn=qz:chó͘/xm,zz:chó/qz,tw,xm,zz:chá/qz,tw,xm,zz:chái
-|mn_note=chó͘/chó - literary; chá - vernacular; chái - vernacular (for certain words)
+|mn=qz,tw,xm,zz:chá/qz,tw,xm,zz:chái/qz:chó͘/xm,zz:chó
+|mn_note=chá - vernacular; chái - vernacular (for certain words); chó͘/chó - literary
 |w=2tsau
 |mc=y
 |oc=y
