--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -418,6 +418,8 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Finnish: {{t+|fi|taistelu}}
 * French: {{t+|fr|bataille|f}}
 * German: {{t+|de|Kampf|m}}, {{t+|de|Schlacht|f}}
+* Greek: {{t+|el|μάχη|f}}
+*: Ancient Greek: {{t|grc|μάχη|f}}, {{t|grc|δῆρις|f}} {{qualifier|Epic}}
 * Hebrew: {{t+|he|קרב|m|tr=kráv}}
 * Hindi: {{t+|hi|युद्ध|tr=yud'dha|sc=Deva}}, {{t+|hi|लड़ाई|tr=laṛā'ī|sc=Deva}}, {{t+|hi|झगड़ा|tr=jhagṛā|sc=Deva}}
 * Icelandic: {{t+|is|bardagi|m}}
