t+io:[[pruneo]] t+io:[[prunekoloro]] ([[WT:EDIT|Assisted]]) <plum#50156737>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -367,6 +367,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Greek: {{t+|el|δαμασκηνί|n}}
 {{trans-mid}}
 * Icelandic: {{t|is|plómublár|f}}
+* Ido: {{t|io|pruneo}}, {{t|io|prunekoloro}}
 * Irish: {{t|ga|plumachorcra}}
 * Japanese: {{t|ja|暗紫色|tr=あんししょく, anshishoku}}
 * Swahili: {{t+|sw|zambarau}}
