--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -432,6 +432,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Danish: {{t|da|blommefarvet}}
 * Dutch: {{t+|nl|donkerrood}}, {{t+|nl|donkerrode}}
 * Finnish: {{t|fi|luumunpunainen}}
+* Ido: {{t|io|prunea}}
 * Irish: {{t|ga|plumachorcra}}
 {{trans-mid}}
 * Japanese: [[暗紫色]]の (あんししょくの, anshishoku no)
