t+gl:[[bordear]] ([[WT:EDIT|Assisted]]) <skirt#50186009>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -302,6 +302,7 @@
 {{trans-bottom}}
 
 {{trans-top|to move around, to avoid the centre}}
+* Galician: {{t+|gl|bordear}}
 * Maori: {{t|mi|hohoni}}, {{t|mi|taku}}, {{t|mi|honi}}
 {{trans-mid}}
 {{trans-bottom}}
