--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -44,7 +44,7 @@ Note that 昔 has meaning of “past, ending”, hence connotations of “feelin
 # to [[rue]]; to [[begrudge]]
 # {{lb|zh|Cantonese}} to [[kiss]]
 #* {{zh-x|門牙 和 紅唇 做 美夢，每次 你 輕{hing1}輕{hing1} 的 親 我（@'''錫''' 啖 先 哪）||C|ref={{w2|zh|林姍姍}}, {{lang|zh|連鎖反應}}}}
-# {{lb|zh|Cantonese}} to [[cherish]]; to [[adore]]
+# {{lb|zh|Cantonese}} to [[cherish]]; to [[adore]]; to [[like]]
 #* {{zh-x|錫 嗮 你　你 乖乖 地 我 實行 錫 嗮 你||C|ref={{w2|zh|許冠傑}} ({{w|Samuel Hui}}), {{lang|zh|錫嗮你}}}}
 
 ====Compounds====
