--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -39,7 +39,7 @@ Note that 昔 has meaning of “past, ending”, hence connotations of “feelin
 
 # [[pity]]; [[regret]]
 # to [[cherish]]; to [[value]] [[greatly]]
-# to [[love]] [[dearly]]
+# {{lb|zh|dialectal Mandarin}} to [[love]] [[dearly]]
 # {{lb|zh|Cantonese}} to [[cherish]]; to [[adore]]; to [[like]]
 # {{lb|zh|Cantonese}} to [[kiss]]
 # to [[grieve]]
