--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -152,6 +152,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Assamese: {{t|as|পোন}}
 * Asturian: {{t|ast|derechu}}
 * Bashkir: {{t|ba|төҙ}}
+* Belarusian: {{t-needed|be}}
 * Burmese: {{t+|my|ဖြောင့်|sc=Mymr}}, {{t+|my|စင်း|sc=Mymr}}
 * Chamicuro: {{t|ccc|nanatolo}}
 * Chinese:
