t+be:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <straight#50193260>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -212,6 +212,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{trans-top|direct, truthful, frank}}
 * Armenian: {{t+|hy|ազնիվ}}
 * Bashkir: {{t|ba|тура}}
+* Belarusian: {{t-needed|be}}
 * Czech: {{t+|cs|přímý|m}}
 * Dutch: {{t|nl|zoals het hoort}}
 * Finnish: {{t+|fi|suora}}, {{t+|fi|rehellinen}}, {{t+|fi|vilpitön}}
