--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -22,7 +22,7 @@ From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{
 #*: Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
 # To cause something to be lost; to cause the expenditure or relinquishment of.
 #: {{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
-#* {{w|William Shakespeare}} (c.1564–1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: though it '''cost''' me ten nights' watchings
 # To require to be borne or suffered; to cause.
 #* {{rfdate|and other bibliographic particulars}} {{w|John Milton}}
