--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -26,9 +26,9 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 
 # {{lb|en|intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: {{ux|en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
-#* {{w|William Shakespeare}} (1564-1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: Look, who '''comes''' yonder?
-#* {{w|Alfred, Lord Tennyson|Alfred Tennyson}} (1809-1892)
+#* {{rfdate|and other bibliographic particulars}} {{w|Alfred, Lord Tennyson|Alfred Tennyson}}
 #*: I did not '''come''' to curse thee.
 ## To move towards the speaker.
 ##: {{ux|en|I called the dog, but she wouldn't '''come'''.}}
@@ -52,19 +52,14 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
 # {{lb|en|intransitive}} To [[appear]], to [[manifest]] itself.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
-#* {{w|Samuel Butler (poet)|Samuel Butler}} (1613-1680), ''{{w|Hudibras}}'':
+#* {{rfdate|and other bibliographic particulars}} {{w|Samuel Butler (poet)|Samuel Butler}}, ''{{w|Hudibras}}'':
 #*: when butter does refuse to '''come''' [i.e. to form]
 # {{lb|en|intransitive}} To take a position to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
 # {{senseid|en|orgasm}}{{lb|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
 #* '''2004''', {{w|Alan Hollinghurst}}, ''{{w|The Line of Beauty}}'', Bloomsbury, 2005, Chapter 2:
 #*: Nick was more and more seriously absorbed, but then just before he '''came''' he had a brief vision of himself, as if the trees and bushes had rolled away and all the lights of London shone in on him: little Nick Guest from Barwick, Don and Dot Guest's boy, fucking a stranger in a Notting Hill garden at night.
-#* {{quote-book
-|year=2008
-|author={{w|Philip Roth}}
-|title={{w|Indignation (novel)|Indignation}}
-|section=
-|passage= The sheer unimaginableness of '''coming''' into her mouth — of '''coming''' into anything other than the air or a tissue or a dirty sock — was an allurement too stupendous for a novice to forswear.}}
+#* {{quote-book| year=2008| author={{w|Philip Roth}}| title={{w|Indignation (novel)|Indignation}}| passage= The sheer unimaginableness of '''coming''' into her mouth — of '''coming''' into anything other than the air or a tissue or a dirty sock — was an allurement too stupendous for a novice to forswear.}}
 #: {{ux|en|He '''came''' after a few minutes.}}
 # {{lb|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
@@ -76,7 +71,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #: {{ux|en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{lb|en|copulative|archaic}} To [[become]], to [[turn out]] to be.
 #: {{ux|en|He was a dream '''come''' true.}}
-#* {{w|William Shakespeare}} (1564-1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: How '''come''' you thus estranged?
 # {{lb|en|intransitive}} To be supplied, or made available; to exist.
 #: {{ux|en|He's as tough as they '''come'''.&nbsp;&nbsp; Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.}}
