OTOH, as long as we have entries for these, they should be listed. however, maybe the entries should be [[WT:RFD|RFDed]] as [[WT:SOP|SOP]] <count#50205907>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -194,6 +194,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''count'' (noun)}}
+* {{l|en|body count}}
 * {{l|en|countless}}
 {{rel-mid3}}
 * {{l|en|down for the count}}
