--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -207,6 +207,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 {{rel-mid3}}
 * {{l|en|soft count}}
 * {{l|en|sperm count}}
+* {{l|en|thread count}}
 {{rel-bottom}}
 
 =====Translations=====
