--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -26,7 +26,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 # {{lb|en|heading}} ''To sense or think emotionally or judgmentally.''
 ## {{lb|en|transitive}} To experience an emotion or other mental state about.
 ##: {{ux|en|I can '''feel''' the sadness in his poems.}}
-##* {{w|Alexander Pope}} (1688-1744)
+##* {{rfdate|and other bibliographic particulars}} {{w|Alexander Pope}}
 ##*: Teach me to '''feel''' another's woe.
 ##* {{RQ:EHough PrqsPrc|I|0105}}
 ##*: Captain Edward Carlisle, soldier as he was, martinet as he was, '''felt''' a curious sensation of helplessness seize upon him as he met her steady gaze, her alluring smile ; he could not tell what this prisoner might do.
@@ -35,7 +35,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 |passage=British journalists shun complete respectability, '''feeling''' a duty to be ready to savage the mighty, or rummage through their bins. Elsewhere in Europe, government contracts and subsidies ensure that press barons will only defy the mighty so far.}}
 ## {{lb|en|transitive}} To [[think]], [[believe]], or have an [[impression]] concerning.
 ##: {{ux|en|I '''feel''' that we need to try harder.}}
-##* {{w|William Shakespeare}} (1564-1616)
+##* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}} 
 ##*: Garlands{{...}}which I '''feel''' / I am not worthy yet to wear.
 ##* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=19|url=http://openlibrary.org/works/OL2004261W
@@ -43,14 +43,12 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 ## {{lb|en|intransitive|copulative}} To experience an emotion or other mental state.
 ##: {{ux|en|He obviously '''feels''' strongly about it.}}
 ##: {{ux|en|She '''felt''' even more upset when she heard the details.}}
-##* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=5
-|passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
+##* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}| title={{w|The Celebrity}}| chapter=5| passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
 ## {{lb|en|intransitive}} To [[sympathise]]; to have the sensibilities moved or affected.
 ##: {{ux|en|I '''feel''' for you and your plight.}}
-##* {{w|Edmund Burke}} (1729-1797)
+##* {{rfdate|and other bibliographic particulars}} {{w|Edmund Burke}}
 ##*: [She] '''feels''' with the dignity of a Roman matron.
-##* {{w|Alexander Pope}} (1688-1744)
+##* {{rfdate|and other bibliographic particulars}} {{w|Alexander Pope}}
 ##*: who '''feel''' for all mankind
 # {{lb|en|transitive}} To be or become [[aware]] of.
 # {{lb|en|transitive}} To experience the [[consequence]]s of.
