--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -15,7 +15,8 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=kēng
+|m=kēng,er=y
+|m_note=kēngr - "pit<nowiki>;</nowiki> hollow"
 |ma=zh-keng.ogg
 |m-s=
 |c=haang1
