--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60108|canj=AYT|ids=⿱日立}}
 
-# [[bright]] [[light]], [[sunlight]]
-# [[dazzling]]
-
 ====References====
 * {{Han ref|kx=0494.030|dkj=13862|dj=0858.090|hdz=21503.090|uh=6631|ud=26161|bh=AC52|bd=44114}}
 
@@ -31,7 +28,12 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{†}} {{zh-original|翌|[[tomorrow]]}}
+# {{lb|zh|literary}} [[bright]] [[light]]; [[sunlight]]
+# {{lb|zh|literary}} to [[shine]]; to [[illuminate]] {{zh-alt-lb|煜}}
+
+===Compounds===
+{{zh-der|昱昱}}
 
 ----
 
