--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -24,24 +24,24 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 #* {{RQ:Chrsty Atbgrfy|II|4}}
 #*: Mind you, clothes were clothes in those days.{{...}}Frills, ruffles, flounces, lace, complicated seams and gores: not only did they sweep the ground and have to be held up in one hand elegantly as you walked along, but they had little capes or '''coats''' or feather boas.
 # {{lb|en|countable}} A [[covering]] of [[material]], such as [[paint]].<sup>{{w|Paint|Wp}}</sup>
-#* {{w|John Milton}} (1608-1674)
+#* {{rfdate|and other bibliographic particulars}} {{w|John Milton}}
 #*: Fruit of all kinds, in '''coat''' / Rough or smooth rined, or bearded [[husk]], or [[shell]].
 # {{lb|en|countable}} The [[fur]] or [[feathers]] covering an animal's [[skin]].<sup>{{w|Coat (animal)|Wp}}</sup>
 #: {{ux|en|When the dog shed its '''coat''', it left hair all over the furniture and the carpet.}}
 # {{lb|en|uncountable|nautical}} [[canvas|Canvas]] [[painted]] with [[thick]] [[tar]] and secured round a [[mast]] or [[bowsprit]] to prevent [[water]] running [[down]] the sides into the [[hold]] (now made of [[rubber]] or [[leather]]).
 # {{lb|en|obsolete}} A [[petticoat]].
-#* {{w|John Locke}} (1632-1705)
+#* {{rfdate|and other bibliographic particulars}} {{w|John Locke}}
 #*: a child in '''coats'''
 # The [[habit]] or [[vesture]] of an order of men, indicating the order or office; [[cloth]].
-#* {{w|Jonathan Swift}} (1667–1745)
+#* {{rfdate|and other bibliographic particulars}} {{w|Jonathan Swift}}
 #*: Men of his '''coat''' should be minding their prayers.
-#* {{w|William Shakespeare}} (c.1564–1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: She was sought by spirits of richest '''coat'''.
 # A [[coat of arms]].<sup>{{w|Coat of arms|Wp}}</sup>
-#* {{w|William Shakespeare}} (c.1564–1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: [[Hark]], countrymen! either renew the fight, / Or tear the lions out of England's '''coat'''.
 # A [[coat card]].
-#* {{w|Philip Massinger}} (1583-1640)
+#* {{rfdate|and other bibliographic particulars}} {{w|Philip Massinger}}
 #*: Here's a trick of discarded cards of us! We were ranked with '''coats''' as long as old master lived.
 
 ====Derived terms====
