--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -21,11 +21,11 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 |title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]
 |passage=Plastics are energy-rich '''substances''', which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field.}}
 # The [[essential]] part of anything; the most vital part.
-#* {{w|John Dryden}} (1631-1700)
+#* {{rfdate|and other bibliographic particulars}} {{w|John Dryden}}
 #*: Heroic virtue did his actions guide, / And he the '''substance''', not the appearance, chose.
-#* Bishop Burnet
+#* {{rfdate|and other bibliographic particulars}} Bishop {{w|Burnet}}
 #*: This edition is the same in '''substance''' with the Latin.
-#* {{w|Edmund Burke}} (1729-1797)
+#* {{rfdate|and other bibliographic particulars}} {{w|Edmund Burke}}
 #*: It is insolent in words, in manner; but in '''substance''' it is not only insulting, but alarming.
 # Substantiality; solidity; firmness.
 #: {{ux|en|Some textile fabrics have little '''substance'''.}}
@@ -33,9 +33,9 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 #: {{ux|en|a man of '''substance'''}}
 #* Bible, {{w|Gospel of Luke|Luke}} xv. 13
 #*: And there wasted his '''substance''' with riotous living.
-#* {{w|William Shakespeare}} (1564-1616)
+#* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: Thy '''substance''', valued at the highest rate, / Cannot amount unto a hundred marks.
-#* {{w|Jonathan Swift}} (1667–1745)
+#* {{rfdate|and other bibliographic particulars}} {{w|Jonathan Swift}}
 #*: We are destroying many thousand lives, and exhausting our '''substance''', but not for our own interest.
 # A form of matter that has constant chemical composition and characteristic properties.
 # [[drug|Drugs]] {{gloss|illegal narcotics}}
