--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -46,7 +46,7 @@
 * Dutch: {{t+|nl|Verenigd Koninkrijk|n}}
 * Dzongkha: {{t|dz|ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ}}
 * Esperanto: {{t|eo|Unuiĝinta Regno}}
-* Estonian: {{t+|et|Ühendkuningriik}}, {{t|et|Suurbritannia ja Põhja-Iiri Ühendkuningriik}}
+* Estonian: {{t+|et|Suurbritannia}}, {{t+|et|Ühendkuningriik}} {{qualifier|only in diplomacy}}, {{t|et|Suurbritannia ja Põhja-Iiri Ühendkuningriik}}
 * Faroese: {{t|fo|Hitt Sameinda Kongsríki|n}}
 * Finnish: {{t+|fi|Yhdistynyt kuningaskunta}}
 * French: {{t+|fr|Royaume-Uni|m}}, {{t+|fr|Royaume-Uni de Grande-Bretagne et d'Irlande du Nord|m}}
