--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -100,6 +100,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Georgian: {{t|ka|ისრაელი}}
 * German: {{t+|de|Israel|n}}
 * Greek: {{t+|el|Ισραήλ|n}}
+*: Ancient Greek: {{t|grc|Ἰσραήλ|m}}
 * Gujarati: {{t|gu|ઈઝરાયલ}}
 * Hausa: {{t|ha|Isra'ila}}
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yiśra'ēl}}
