--- a/en/坬/坬.13039.wikitext
+++ b/en/坬/坬.13039.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gwaa3]]|y=gwaa3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土05}}
+===Pronunciation===
+{{zh-pron
+|m=guà
+|c=gwaa3
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -29,13 +42,4 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[guà]] ([[gua4]])|wg=kua<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
+{{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=}}
