--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -10,6 +10,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * {{a|GA}} {{IPA|/ˈkɝtn̩/|[ˈkɝʔn̩]|lang=en}}
 ** {{audio|En-us-curtain.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(r)tən|lang=en}}
+* {{homophone|Kirton}}
 
 ===Noun===
 {{en-noun}}
