t+ru:[[играться]] ([[WT:EDIT|Assisted]]) <play#50237339>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -187,7 +187,7 @@ The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġ
 * Romani: {{t|rom|khelel}}
 * Romanian: {{t+|ro|juca}}
 * Romansch: {{t|rm|giugar}}
-* Russian: {{t+|ru|игра́ть|impf}}, {{t+|ru|поигра́ть|pf}}
+* Russian: {{t+|ru|игра́ть|impf}}, {{t+|ru|поигра́ть|pf}}, {{t+|ru|играться}}
 * Sardinian: {{t|sc|giogae}}, {{t|sc|giogai}}, {{t|sc|giogare}}, {{t|sc|zogare}}
 * Scottish Gaelic: {{t|gd|cluich}}, {{qualifier|children}} {{t|gd|cleasaich}}
 * Serbo-Croatian:
