t+fi:[[löydös]] ([[WT:EDIT|Assisted]]) <find#50250748>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -289,7 +289,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Danish: {{t|da|fund|c}}
 * Dutch: {{t+|nl|vondst|f}}
 * Esperanto: {{t|eo|trovaĵo}}, {{t|eo|trovitaĵo}}
-* Finnish: {{t+|fi|löytö}}
+* Finnish: {{t+|fi|löytö}}, {{t+|fi|löydös}}
 * French: {{t+|fr|trouvaille|f}}
 * Galician: {{t+|gl|achado|m}}
 * German: {{t+|de|Fund|m}}
