--- a/en/昲/昲.16987.wikitext
+++ b/en/昲/昲.16987.wikitext
@@ -14,18 +14,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fai3]]|y=fai3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日05}}
+===Pronunciation===
+{{zh-pron
+|m=fèi
+|c=fai3
+|mc=y
+|oc=y
+|cat=
+}}
 
-----
+===Definitions===
+{{zh-hanzi}}
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fèi]] ([[fei4]])|wg=fei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
+# {{rfdef|zh}}
