--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -53,8 +53,9 @@ Cognate with {{och-l|寔|this}}, {{och-l|實|this}} and {{och-l|諟|to examine, 
 {{zh-hanzi}}
 
 # {{†}} [[this]]; this [[thing]]
-#* {{zh-x|是日|'''this''' day}}
+#: {{zh-x|是日|'''this''' day}}
 #* {{zh-x|是 可 忍，孰 不 可 忍？|If '''this''' can be tolerated, what cannot?|ref=Analects}}
+#* {{zh-x|日 出 于 ^暘谷，浴 于 ^咸池，拂 于 ^扶桑，是 謂 晨明。|The sun rises from Yanggu, bathes in Xianchi, and draws near to the Fusang: '''this''' is called Dawn.|ref=Huainanzi}}
 # {{lb|zh|copulative}} to [[be]]
 ## {{n-g|indicating that the subject and object are the same.}}
 ##: {{zh-x|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
