--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -337,7 +337,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Manx: {{t|gv|billey plumbis|m}}
 * Maori: {{t|mi|paramu}}
 * Norman: {{t|nrf|preunyi|m}}
-* Old English: {{t|ang|plūme|f}}
+* Old English: {{t|ang|plūme|f}}, {{t|ang|plūmtrēow|n}}
 * Papiamentu: {{t|pap|preimu}}
 * Polish: {{t+|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}
