--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -111,9 +111,13 @@ From {{bor|ja|ltc|sort=ほう|-}} {{ltc-l|昴}}.
 Various nanori readings.
 
 ====Proper noun====
-{{ja-pos|proper|たかし|のぼる}}
+{{ja-pos|proper|たかし}}
 
 # {{given name|male|lang=ja|A=a|nodot=1|sort=たかし}}
+
+{{ja-pos|proper|のぼる}}
+
+# {{given name|male|lang=ja|A=a|nodot=1|sort=のぼる}}
 
 ===References===
 <references/>
