--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -122,22 +122,22 @@ Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ||st
 
 # a {{l|en|star}}
 #: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいて いる|an endless number of '''stars''' are shining}}
-#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The '''stars''' belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
+#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lj|ニクスへの旅}}|chapter={{lj|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The '''stars''' belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
 #*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[潮](うしお)の[星](ほし)、[京](けい)[河](が)}}|trans-chapter=Keiga, the Tide Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|潮の'''星'''の誘%引は永%遠に君%臨する。|うしお の '''ほし''' の ゆう%いん は えい%えん に くん%りん する。|The pull of the tide star holds eternal sway.}}|language=Japanese}}
 #*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[夜](よる)の[星](ほし)、[黒](こく)[瘴](しょう)}}|trans-chapter=Kokushō, the Evening Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|夜の'''星'''が沈むとて、静かな明けの先%触れではない。|よる の '''ほし''' が しずむ とて、しずか な あけ の さき%ぶれ で は ない。|The fall of the evening star never heralds a gentle dawn.}}|language=Japanese}}
 #*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[昇](のぼ)る[星](ほし)、[珠](じゅ)[眼](がん)}}|trans-chapter=Jugan, the Rising Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|昇る'''星'''の光が明日の勇%者に力を与える。|のぼる '''ほし''' の ひかり が あした の ゆう%しゃ に ちから を あたえる。|The light of the rising star empowers the champions of tomorrow.}}|language=Japanese}}
-#*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[降](ふ)る[星](ほし)、[流](りゅう)[星](せい)}}|trans-chapter=Ryūsei, the Falling Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|降る'''星'''の先にあるのは破%滅のみ。|ふる '''ほし''' の さき に ある の は は%めつ のみ。|The course of the falling star always ends in ruin.}}|language=Japanese}}
 #*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[明](あ)けの[星](ほし)、[陽](りゅう)[星](せい)}}|trans-chapter=Yōsei, the Morning Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|明けの'''星'''の抱%擁はあらゆるものを闇から解%放する。|あけ の '''ほし''' の ほう%よう は あらゆる もの を やみ から かい%ほう する。|The embrace of the morning star frees all from darkness.}}|language=Japanese}}
+#*{{quote-book||date=Nov 17 2017||publisher={{w|Wizards of the Coast}}|chapter={{lj|[降](ふ)る[星](ほし)、[流](りゅう)[星](せい)}}|trans-chapter=Ryūsei, the Falling Star|{{lj|[ICONIC MASTERS](アイコニックマスターズ)}}|||{{ja-usex|降る'''星'''の先にあるのは破%滅のみ。|ふる '''ほし''' の さき に ある の は は%めつ のみ。|The course of the falling star always ends in ruin.}}|language=Japanese}}
 # {{lb|ja|sort=ほし|tarot}} the {{l|en|star|Star}}
 # {{lb|ja|loosely}} a {{l|en|planet}}
 #* {{quote-book||
-|{{ruby|{{w2|ja|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)|sc=Jpan}}}}
+|{{wj|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)}}
 ||181–183
 |{{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea '''Planet''' ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind '''Planet'''. Sailor Uranus enters the scene!}}
 |last=Takeuchi
 |first=Naoko
 |authorlink=Naoko Takeuchi
-|chapter={{ruby|{{lang|ja|[Act](アクト) [29](トゥエンティナイン)　[無](む)[限](げん)[３](スリー)　[２人](ふたり) [NEW](ニュー) [SOLDIERS](ソルジャーズ)}}}}
+|chapter={{lj|[Act](アクト) [29](トゥエンティナイン)　[無](む)[限](げん)[３](スリー)　[２人](ふたり) [NEW](ニュー) [SOLDIERS](ソルジャーズ)}}
 |trans-chapter=Act 29: Infinity 3: 2 NEW SOLDIERS
 |trans-title={{w|Sailor Moon|Pretty Guardian SAILOR MOON}}
 |genre=fiction
