--- a/en/垡/垡.13093.wikitext
+++ b/en/垡/垡.13093.wikitext
@@ -12,12 +12,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fat6]]|y=fat6}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=fá
+|c=fat6
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -32,23 +45,14 @@
 # {{defn|lang=ja|sort=土06}}
 
 ====Readings====
-* {{ja-readings|on=[[はつ]] (hatsu), [[ぼち]] (bochi)|kun=[[たがやす]] (tagayasu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fá]] ([[fa2]])|wg=fa<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
+{{ja-readings|on=[[はつ]] (hatsu), [[ぼち]] (bochi)|kun=[[たがやす]] (tagayasu)}}
 
 ----
 
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[phạt]]|rs=土06}}
+{{vi-hantu|phạt|rs=土06}}
 
 # {{defn|lang=vi|sort=土06}}
 
