--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -319,6 +319,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Norwegian: {{t|no|funn|n}}
 * Portuguese: {{t+|pt|encontro|m}}
 * Romanian: {{t+|ro|găsire|f}}, {{t+|ro|găsit|n}}
+* Russian: {{t+|ru|иска́ние|impf}}
 * Taos: {{t|twf|thǫ́ne}}
 * Thai: {{t+|th|หา}}
 {{trans-bottom}}
