/* Translations */ Added Ancient Greek translation of this word. <cut#50277335>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -541,6 +541,8 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Galician: {{t+|gl|cortar}}
 * Georgian: {{t|ka|გაჭრა}}, {{t|ka|გაკვეთა}}
 * German: {{t|de|einschneiden}}
+* Greek:
+*: Ancient Greek: {{t|grc|τέμνω}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t+|hi|काटना|tr=kāṭnā}}
 * Icelandic: {{t+|is|skera}}
