--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -37,6 +37,9 @@
 ====Compounds====
 {{zh-der|昴降}}
 
+====Descendants====
+{{CJKV||^ぼう}}
+
 {{zh-cat|Astronomy}}
 
 ----
@@ -46,15 +49,23 @@
 ===Kanji===
 {{ja-kanji|grade=n|rs=日05}}
 
-# the [[Pleiades]] (star cluster)
+# the [[Pleiades]] ([[star cluster]])
 
 ====Readings====
 {{ja-readings
 |goon=みょう<めう
 |kanon=ぼう<ばう
 |kun=すばる-, すまる-
-|nanori=たかし, のぼる
+|nanori=あき, こう<かう, たか, たかし, のぼる
 }}
+
+====Compounds====
+{{top2}}
+* {{ja-r|昴宿|^ぼうしゅく}}
+* {{ja-r|昴星|^ぼうせい}}
+* {{ja-r|昴一|^こういち}}
+* {{ja-r|昴%子|^あき%こ}}
+{{bottom}}
 
 ===Etymology 1===
 <div style="float:right;">
@@ -64,7 +75,7 @@
 {{ja-kanjitab|yomi=k|すばる}}
 Likely from {{inh|ja|ojp|sort=すばる|-}}, use of kanji in Japanese texts first appears in the ''{{w|ja:丹後国風土記|Tangō-no-kuni Fudoki}}'' (''c.'' mid-8th century), phonetic spelling first attested in the ''{{w|Wamyō Ruijushō}}'' (938 {{CE}}).
 
-By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]]|pos=intransitive}}, due to the way the [[star]]s in the [[constellation]] all ''[[cluster]]'' together.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR"/>. Compare {{m|ja|統べる|tr=suberu||to [[command]]|pos=transitive}}.
+By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]]|pos=intransitive}}, due to the way the [[star]]s in the [[constellation]] all ''[[cluster]]'' together.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR"/> Compare {{m|ja|統べる|tr=suberu||to [[command]]|pos=transitive}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=k|すばる|acc=1|acc_ref=DJR}}
@@ -72,8 +83,8 @@ By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]
 ====Proper noun====
 {{ja-pos|proper|すばる}}
 
-# the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
-#: {{synonyms|ja|プレアデス星団|tr=Pureadesu-seidan|昴宿|tr2=Bō-shuku|昴星|tr3=Subaruboshi, Bōsei|六連星|tr4=Mutsuraboshi}}
+# {{lb|ja|astronomy|sort=すばる}} the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
+#: {{synonyms|ja|プレアデス星団|tr=Pureadesu-seidan|昴宿|tr2=Bōshuku|昴星|tr3=Subaruboshi, Bōsei|六連星|tr4=Mutsuraboshi}}
 # {{given name|female|lang=ja|A=a|nodot=1|sort=すばる}}
 
 ===Etymology 2===
@@ -85,7 +96,7 @@ Possibly an allusion from {{m|ja||tr=sumaru no tama||lit=[[cluster]] of [[pearl]
 ====Proper noun====
 {{ja-pos|proper|すまる}}
 
-# {{lb|ja|regional|sort=すまる}} the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
+# {{lb|ja|astronomy|regional|sort=すまる}} the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
 # {{given name|male|lang=ja|A=a|nodot=1|sort=すまる}}
 
 ===Etymology 3===
@@ -104,17 +115,23 @@ From {{bor|ja|ltc|sort=ほう|-}} {{ltc-l|昴}}.
 ====Proper noun====
 {{ja-pos|proper|ぼう|hhira=ばう}}
 
-# {{lb|ja|Chinese astronomy|sort=ほう}} the {{w|Hairy Head}} [[constellation]], one of the {{w|Twenty-Eight Mansions}}, corresponds to the [[Pleiades]] in English
-#: {{synonyms|ja|昴宿|tr=Bō-shuku|昴星|tr2=Bōsei}}
+# {{lb|ja|Chinese astronomy|sort=ほう}} the {{w|Hairy Head}} [[constellation]], one of the {{w|Twenty-Eight Mansions}}, corresponds to the [[Pleiades]] [[star cluster]] in English
+#: {{synonyms|ja|昴宿|tr=Bōshuku|昴星|tr2=Bōsei}}
 
 ===Etymology 4===
-Various nanori readings.
+{{ja-kanjitab|yomi=i|たかし}}
+Nominalization of classical adjective {{m|ja|高し|tr=takashi}}, modern {{m|ja|高い|tr=takai||[[high]]}}.
 
 ====Proper noun====
 {{ja-pos|proper|たかし}}
 
 # {{given name|male|lang=ja|A=a|nodot=1|sort=たかし}}
 
+===Etymology 5===
+{{ja-kanjitab|yomi=i|のぼる}}
+Nominalization of verb {{m|ja|[[上る]], [[登る]]|tr=noboru||to [[ascend]], [[rise]]}}.
+
+====Proper noun====
 {{ja-pos|proper|のぼる}}
 
 # {{given name|male|lang=ja|A=a|nodot=1|sort=のぼる}}
