--- a/en/値/値.11033.wikitext
+++ b/en/値/値.11033.wikitext
@@ -55,6 +55,7 @@ Possibly the conjunctive form of the verb {{m|ja|能う|tr=atau}}.<ref name="DJR
 * {{ja-r|値千金|あたいせんきん}}
 
 =====See also=====
+* {{ja-r|価値|かち|[[value]], [[worth]]}}
 * {{ja-r|変数|へんすう|[[variable]]}}
 
 ====Verb====
