/* Derived terms */ <straight#50279410>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ====Derived terms====
 {{der3|lang=en|title=Terms derived from ''straight''
 | {{l|en|damn straight}}
+| {{l|en|get something straight}}
 | {{l|en|go straight}}
 | {{l|en|play it straight}}
 | {{l|en|scare straight}}
