/* Adjective */ How easy is it to go straight ? <straight#50279634>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -41,6 +41,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 # Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
 #* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
 #*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
+#*'''2010''', {{w|The Guardian}}, ''Out of prison and trying to go straight'' [https://www.theguardian.com/society/2010/aug/04/prisoner-going-straight-drugs-crime] (4 Aug 2010)
+#*:How easy is it to go straight after a life spent in and out of prison? 
 # [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
 #* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
 #*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
