--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -53,7 +53,7 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[あう]] (au), [[えう]] (eu)|kun=[[くぼみ]] (kubomi)}}
+* {{ja-readings|on=あう,えう|kun=くぼみ}}
 
 ----
 
