/* Derived terms */ <bridge#50282204>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -72,6 +72,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |bridge mount
 |bridge the gap
 |bridge over troubled waters
+|bridge route
 |covered bridge
 |cross that bridge when one comes to it
 |drawbridge
