--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -57,6 +57,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Japanese: {{t+|ja|例えば|tr=tatoeba|sc=Jpan}}
 * Korean: {{t|ko|예를 들면}}
 {{trans-mid}}
+* Kurdish: {{t+|ku|wekî mînak}}, {{t|ku|wekî nimûne}}, {{t|ku|mîsalen}}, {{t+|ku|w.n.}}, {{t|ku|w.m.}}
 * Latin: {{t+|la|e. g.}}, {{t+|la|ex. gr.}} ''(exempli gratia)''; {{t+|la|e. c.}} ''(exempli causa)''
 * Latvian: {{qualifier|[[piemēram]]}} {{t|lv|piem.}}
 * Lithuanian: {{qualifier|[[pavyzdžiui]]}} {{t|lt|pvz.}}
