--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -77,6 +77,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 {{zh-pron
 |c=ceon1
 |h=pfs=chhûn;gd=cun1
+|mn-t=cung1
 |dial=n
 |cat=n
 }}
@@ -84,12 +85,12 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|Cantonese|Hakka}} [[egg]]; [[roe]]
+# {{lb|zh|Cantonese|Hakka|Teochew}} [[egg]]; [[roe]]
 # {{lb|zh|Cantonese|vulgar}} [[testicle]]
 # {{lb|zh|Cantonese|vulgar}} {{rfdef|zh}}
 
 ====Compounds====
-{{zh-der|雞春|多春魚|春袋|春核|蝦春|石春|水蛇春咁長|乜春|鵝春石}}
+{{zh-der|雞春|魚春|多春魚|春袋|春核|蝦春|石春|水蛇春咁長|乜春|鵝春石}}
 
 {{zh-cat|Beginning}}
 
