/* Scots */ cleanup <brick#50305937>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -452,7 +452,7 @@ From {{etyl|en|fr}} {{m|en|brig}}.
 ==Scots==
 
 ===Etymology===
-From {{etyl|ang|sco}} {{m|ang|brecan}}, from {{etyl|gem-pro|sco}} {{m|gem-pro|*brekaną}}.
+From {{der|sco|ang|brecan}}, from {{der|sco|gem-pro|*brekaną}}.
 
 ===Verb===
 {{head|sco|verb}}
