/* French */ cleanup <brick#50305941>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -421,7 +421,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 ==French==
 
 ===Etymology===
-From {{etyl|en|fr}} {{m|en|brig}}.
+From {{der|fr|en|brig}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
