/* English */ cleanup <brick#50305957>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{etyl|gem|en}} source. Compare to {{cog|dum|bricke||broken piece; tile}}, {{etyl|enm|en}} {{m|en|brike}}. Cognate with the verb {{m|en|break}}.
+From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}} source. Compare to {{cog|dum|bricke||broken piece; tile}}, {{cog|enm|brike}}. Cognate with the verb {{m|en|break}}.
 
 ===Pronunciation===
 * {{a|UK|US}} {{enPR|brĭk}}, {{IPA|/bɹɪk/|lang=en}}
