--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -274,7 +274,7 @@ From modern {{bor|de|fr|blond}}, from {{der|de|frk|*blund}}, from {{der|de|gem-p
 ===Adjective===
 {{de-adj|blonder|blondesten}}
 
-# [[#English|blond]]; [[fair]]
+# [[#English|blond]]; [[fair]]; {{ngd|unlike English, not commonly used of anything other than hair (except beer, see hereunder)}}
 #: {{ux|de|'''Blonde''' Haare sind vor allem bei den Völkern germanischer und slawischer Abstammung verbreitet.|'''Blond''' hair is primarily common among the peoples of Germanic and Slavic descent.}}
 # {{lb|de|of beer}} [[bright]]; not brown or [[yeasty]]
 # {{lb|de|colloquial|possibly|_|offensive}} [[stupid]]; [[naive]]
