--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -4,15 +4,15 @@
 {{wikipedia}}
 
 ===Pronunciation===
-* {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/|lang=en}}
-*** {{a|RP}} {{IPA|/ˈbʌ.tə/|lang=en}}
+* {{enPR|bŭtʹər}}, {{IPA|/ˈbʌtəɹ/|lang=en}}
+*** {{a|RP}} {{IPA|/ˈbʌtə/|lang=en}}
 *** {{audio|En-uk-butter.ogg|Audio (RP)|lang=en}}
-*** {{a|GA}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌɾɚ]|lang=en}}
+*** {{a|GA}} {{IPA|/ˈbʌtɚ/|[ˈbʌɾɚ]|lang=en}}
 *** {{audio|en-us-butter.ogg|Audio (GA)|lang=en}}
-*** {{a|Scotland|Wales}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌ.ʔɚ]|lang=en}}
-** {{rhymes|ʌtə(r)|lang=en}}
-* {{a|Northern England|Midlands}} {{IPA|/ˈbʊ.tə/|lang=en}}
-** {{rhymes|ʊtə(r)|lang=en}}
+*** {{a|Scotland|Wales}} {{IPA|/ˈbʌtɚ/|[ˈbʌʔɚ]|lang=en}}
+** {{rhymes|ʌtə(ɹ)|lang=en}}
+* {{a|Northern England|Midlands}} {{IPA|/ˈbʊtə/|lang=en}}
+** {{rhymes|ʊtə(ɹ)|lang=en}}
 * {{hyphenation|but|ter|lang=en}}
 
 ===Etymology 1===
