Undo revision 50308572 by [[Special:Contributions/88.74.105.217|88.74.105.217]] ([[User talk:88.74.105.217|talk]]) - the first change is ungrammatical and the second is very dubious. <blond#50308816>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -22,7 +22,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 # A person with this hair color.
 
 ====Usage notes====
-* This word can vary according to gender, with “blond” being used of males and “blonde” of females. This following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally.
+* This word can vary according to gender, with “blond” being used of males and “blonde” of females, following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally.
 * Traditional terms for light hair are ''[[fair]]([[fair-haired|-haired]])'', ''[[fairheaded]]'', ''[[flaxen]]'', ''[[tow-haired]]'', ''[[yellow-haired]]'', and ''[[towhead]]([[towheaded|ed]])''.
 
 ====Translations====
@@ -99,7 +99,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 #* '''1956''', {{w|James Baldwin}}, ''{{w|Giovanni’s Room}}'', Penguin, 2001, Part Two, Chapter 2,
 #*: He seemed—somehow—younger than I had ever been, and '''blonder''' and more beautiful, and he wore his masculinity as unequivocally as he wore his skin.
 #* {{quote-magazine|year=2012|month=Jan|title=The Best Blonde Hair Color in Hollywood|magazine=Cosmopolitan|url=http://www.cosmopolitan.com/hairstyles-beauty/hair-care/best-blonde-hair-color#slide-1|passage='''Blonde''' bombshells have been around since the beginning of time, but lately, stars have really been stepping up their golden-haired game.}}
-# {{lb|en|of a|female|offensive}} {{alternative spelling of|blonde|lang=en}} {{gloss|stupid}}
+# {{lb|en|of a|female}} {{alternative spelling of|blonde|lang=en}} {{gloss|stupid}}
 #* '''2010''', Mariah Stewart, ''Moon Dance'', Simon and Schuster {{ISBN|9781451633054}}
 #*: “She was so '''blond''', that where it said &#39;sign here,&#39; she wrote Gemini.” He had given her only the weakest of smiles.
 #* '''2002''', Michael Jay, ''The Altherian Code'', iUniverse {{ISBN|9780595214914}}, page 118
