--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -22,7 +22,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 # A person with this hair color.
 
 ====Usage notes====
-* This word can vary according to gender, with “blond” being used of males and “blonde” of females, following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally.
+* This word can vary according to gender, with “blond” being used of males and “blonde” of women and girls, following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally.
 * Traditional terms for light hair are ''[[fair]]([[fair-haired|-haired]])'', ''[[fairheaded]]'', ''[[flaxen]]'', ''[[tow-haired]]'', ''[[yellow-haired]]'', and ''[[towhead]]([[towheaded|ed]])''.
 
 ====Translations====
