adjust [[w:Ideographic Description Sequence|IDS]] <愳#50318684>

--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=BUP|ids=⿱⿰目目心}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=BUP|ids=⿱䀠心}}
 
 ====References====
 * {{Han ref|kx=0396.280|dkj=11004|dj=0735.160|hdz=42333.120|uh=6133|ud=24883}}
