--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -77,6 +77,10 @@
 
 ===Etymology===
 {{ja-kanjitab|むね|yomi=k}}
+{{rfe|ja}}
+
+====Alternative forms====
+* {{ja-l|宗}}
 
 ====Pronunciation====
 {{ja-pron|むね|acc=2|acc_ref=DJR|acc2=1|acc2_ref=DJR}}
