--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -151,7 +151,7 @@ From {{etyl|fro|en}} {{m|fro|founder}} (Modern French: {{m|fr|fonder}}), from {{
 * WordNet 3.1: A Lexical Database for English, Princeton University
 
 ===Etymology 3===
-Borrowed from {{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}.
+Borrowed from {{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}. Cognate with {{cog|es|fundir}} and {{m|es|hundir}}.
 
 ====Verb====
 {{en-verb}} {{tcx|transitive|lang=en}}
