/* Translations */ Added Ancient Greek translation of this word. <substance#50334187>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -67,9 +67,8 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * French: {{t+|fr|substance|f}}
 * Galician: {{t+|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
-* Greek:
-*: Classical: {{t|grc|οὐσία|f}}, {{t|grc|ὑπόστασις|f}}
-*: Modern: {{t+|el|ουσία|f}}
+* Greek: {{t+|el|ουσία|f}}
+*: Ancient Greek: {{t|grc|οὐσία|f}}, {{t|grc|ὑπόστασις|f}}
 * Hebrew: {{t+|he|חומר|m|tr=khómer}}
 * Hindi: {{t+|hi|पदार्थ|m|tr=padārth}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
@@ -106,6 +105,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Galician: {{t+|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσία|f}}
+*: Ancient Greek: {{t|grc|οὐσία|f}}
 * Hebrew: {{t|he|תוכן|m|tr=tókhen}}
 * Hungarian: {{t+|hu|lényeg}}, {{t+|hu|szubsztancia}}
 {{trans-mid}}
