/* Pronunciation 1 */ Min Dong <惡#50337213>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -31,7 +31,7 @@
 |h=pfs=ok
 |j=
 |mb=ŏ̤ 
-|md=
+|md=áuk
 |mn=ok/oh
 |mn_note=ok - literary; oh - vernacular (“difficult; slow”, usually written as {{zh-l|僫}})
 |mn-t=
