/* Pronunciation 3 */  # {{lb|zh|literary}} {{n-g|An interrogative pronoun}}: [[how]] <惡#50340930>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -93,10 +93,11 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
+# {{lb|zh|literary}} {{n-g|An interrogative pronoun}}: [[how]]
+# {{lb|zh|literary}} {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
 
 ====Compounds====
-{{zh-der|fold=1|喑惡叱吒|惡有}}
+{{zh-der|fold=1|喑惡叱吒|惡有|惡乎}}
 
 ===Pronunciation 4===
 {{zh-see|噁}}
