/* Translations */ Fixed/expanded Aramaic. <brick#50341358>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -73,7 +73,9 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Albanian: {{t+|sq|tullë|f}}
 * Amharic: {{t|am|ጡብ|sc=Ethi}}
 * Arabic: {{t|ar|طُوبَة|f}}, {{t|ar|لَبِنَة|f}}, {{t|ar|قَرْمِيد|m}}, {{t|ar|طَابُوق|m|tr=ṭābūq}}
-* Aramaic: {{t|arc|לבנתא|f|tr=lbenttā}}
+* Aramaic: 
+*: Classical Syriac: {{t|syc|ܠܒܬܐ|f|tr=ləḇettā}}
+*: Jewish Palestinian Aramaic: {{t|arc|לְבֵינְתָא|f|tr=ləḇênəṯā|sc=Hebr}}
 * Armenian: {{t+|hy|աղյուս}}
 * Aromanian: {{t|rup|chirãmidã|f}}
 * Assamese: {{t|as|ইটা}}
