--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -35,7 +35,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 # {{lb|en|geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{lb|en|algebraic geometry}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
 # {{lb|en|topology}} A one-dimensional [[continuum]].
-# {{lb|en|informal|usually in plural}} The attractive shape of a woman's body.
+# {{lb|en|informal|usually|in the plural}} The attractive shape of a woman's body.
 
 ====Derived terms====
 {{der4|title=terms derived from curve (noun)|algebraic curve|Bézier curve|closed curve|cosine curve|curvaceous|curvy|dragon curve|elliptic curve|horseshoe curve|learning curve|Lissajous curve|Jordan curve|multicurve|nonsimple curve|open curve|pedal curve|plane curve|pursuit curve|simple curve|sine curve|space curve|spherical curve|throw a curve|throw someone a curve|lang=en}}
