--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -25,6 +25,7 @@
 |c=coeng1
 |mn=qz,tw,xm:chhiong/zz:chhiang/qz,tw,xm:chhiuⁿ/zz:chhioⁿ
 |mn_note=chhiong/chhiang - literary; chhiuⁿ/chhioⁿ - vernacular
+|mn-t=ciang1
 |mc=y
 |oc=y
 |ma=
