t+de:[[reihern]] t+fi:[[byytata]] ([[WT:EDIT|Assisted]]) <vomit#50399155>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -64,12 +64,12 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Esperanto: {{t|eo|vomi}}
 * Estonian: {{t|et|oksendama}}
 * Faroese: {{t|fo|spýggja}}
-* Finnish: {{t+|fi|oksentaa}}
+* Finnish: {{t+|fi|oksentaa}}, {{t+|fi|byytata}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|colloquial}}, {{t+|fr|dégueuler}} {{qualifier|slang}}, {{t+|fr|gerber}} {{qualifier|slang}}, {{t+|fr|quicher}} {{qualifier|slang}}
 * Friulian: {{t|fur|gomitâ}}, {{t|fur|rindi}}, {{t|fur|restituî}}
 * Galician: {{t+|gl|vomitar}}
 * Georgian: {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}, {{t|ka|გულისრევა}}
-* German: {{t+|de|übergeben|alt=sich übergeben}}, {{t+|de|erbrechen}}, {{t+|de|kotzen}}, {{t+|de|vomieren}}
+* German: {{t+|de|übergeben|alt=sich übergeben}}, {{t+|de|erbrechen}}, {{t+|de|kotzen}}, {{t+|de|vomieren}}, {{t+|de|reihern}}
 * Greek: {{t+|el|εξεμώ}}, {{t|el|[[κάνω]] [[εμετό]]}}, {{t+|el|ξερνώ}} {{qualifier|colloquial}}
 *: Ancient: {{t|grc|ἐμέω}}, {{t|grc|ἐξεμέω}}
 * Greenlandic: {{t|kl|meriarpoq}}
