/* Pronunciation */Expanded meaning <i.e.#50400101>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -11,7 +11,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/|lang=en}}
 * {{audio|en-us-i.e..ogg|Audio (US)|lang=en}}
-* It is sometimes spoken as ''[[that is]]''.
+* It is sometimes verbally enunciated as ''[[that is]]''.
 
 ===Abbreviation===
 {{rfc-header|Abbreviation}}
