--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 #: Shortly after I announced my pregnancy, he stole my '''''thunder''''' with his news of landing his dream job.
 
 ====Usage notes====
-* [[roll]], [[clap]], [[peal]] are some of the words used to count thunder.
+* [[roll]], [[clap]], [[peal]] are some of the words used to count thunder e.g. ''A series of rolls/claps/peals of thunder were heard''
 
 ====Derived terms====
 {{der-top3}}
