--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -3,10 +3,10 @@
 {{Wikipedia}}
 
 ===Alternative forms===
-* {{l|en|cote}} {{qualifier|obsolete}}
+* {{alter|en|cote||obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|cotte||outer garment with sleeves}}, from {{der|en|la|cotta||undercoat, tunic}}, from {{der|en|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{der|en|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} (Modern German {{m|de|Kotze||coarse woolen blanket; woolen cape}}), {{cog|gml|kot||coat}}, Ancient Greek {{m|grc|βεῦδος||woman's attire}}.
+From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|cotte||outer garment with sleeves}}, from {{der|en|la|cotta||undercoat, tunic}}, from {{der|en|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{der|en|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||coarse woolen blanket; woolen cape}}), {{cog|gml|kot||coat}}, {{cog|grc|βεῦδος||woman's attire}}.
 
 ===Pronunciation===
 * {{a|GA}} {{IPA|/koʊt/|lang=en}}
@@ -189,7 +189,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 {{en-verb}}
 
 # To cover with a coat of some material
-#: ''One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.''
+#: {{ux|en|One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.}}
 # To cover as a coat.
 
 ====Translations====
