--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -185,6 +185,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-top|continually attempt to persuade (a person)}}
 * Czech: {{t+|cs|pohánět}}
 * Esperanto: {{t|eo|peli}}
+* Finnish: {{t+|fi|painostaa}}
 * German: {{t+|de|drängen}}
 * Italian: {{t+|it|spingere}}, {{t+|it|insistere}}
 * Khmer: {{t+|km|ជំរុញ}}
@@ -199,6 +200,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-bottom}}
 
 {{trans-top|continually attempt to promote (a point of view)}}
+* Finnish: {{t+|fi|ajaa}}
 * Italian: {{t+|it|spingere}}
 * Kurdish:
 *: Sorani: {{t|ckb|پاڵ پێوه‌نان|sc=ku-Arab}}
@@ -209,6 +211,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 
 {{trans-top|promote (a product)}}
 * Czech: {{t|cs|prosazovat}}
+* Finnish: {{t+|fi|tyrkyttää}}
 * Italian: {{t|it|preclamizzare}}, {{t+|it|promuovere}}, {{t+|it|pubblicizzare}}
 * Russian: {{t+|ru|продвига́ть|impf}}
 {{trans-mid}}
@@ -219,6 +222,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-top|intransitive: apply force to an object so that it moves away}}
 * Czech: {{t+|cs|tlačit}}
 * Esperanto: {{t+|eo|puŝi}}
+* Finnish: {{t+|fi|työntää}}
 * French: {{t+|fr|pousser}}
 * German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
 * Italian: {{t+|it|spingere}}
@@ -234,6 +238,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-top|intransitive: tense the muscles of the abdomen}}
 * Arabic: {{t-needed|ar}}
 * Czech: {{t+|cs|tlačit}}
+* Finnish: {{t+|fi|ponnistaa}}, {{t+|fi|työntää}}
 * German: {{t+|de|drücken}}
 * Maori: {{t|mi|whakatoutou}} {{qualifier|referring to childbirth}}
 * Persian: {{t-needed|fa}}
@@ -246,11 +251,13 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-bottom}}
 
 {{trans-top|(intrans.) continue to attempt to persuade a person into a particular course of action}}
+* Finnish: {{t+|fi|ajaa}}, {{t+|fi|painostaa}}
 * Telugu: {{t|te|బలవంతంగా చేయించు|sc=Telu}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|try to skip positions in a queue}}
+* Finnish: {{t+|fi|töniä}}, {{t+|fi|etuilla}}
 * German: {{t+|de|drängeln}}, {{t|de|vordrängeln|alt=sich vordrängeln}}
 {{trans-mid}}
 {{trans-bottom}}
