t+fi:[[huovuttaa]] ([[WT:EDIT|Assisted]]) <felt#50482757>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 =====Translations=====
 {{trans-top|make into felt}}
 * Dutch: {{t+|nl|vilten}}
+* Finnish: {{t+|fi|huovuttaa}}
 * German: {{t+|de|filzen}}
 {{trans-mid}}
 * Portuguese: {{t|pt|feltrar}}
