t+hu:[[elvág]] ([[WT:EDIT|Assisted]]) <cut#50505096>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -626,6 +626,7 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Greek: {{t+|el|κόβω}}
 *: Ancient Greek: {{t|grc|κόπτω}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
+* Hungarian: {{t+|hu|elvág}}
 * Icelandic: {{qualifier|with a knife}} {{t+|is|skera}}, {{qualifier|with scissors}} {{t|is|klippa}}
 {{trans-mid}}
 * Irish: {{t|ga|bain}} {{qualifier|grass, hay, etc.}}
