/* Synonyms */ <New Zealand#50526117>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -27,6 +27,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * {{l|en|Aotearoa New Zealand}}
 * {{l|en|NZ}} {{qualifier|abbreviation}}
 * {{l|en|Enzed}}
+Kiwiland or Land of the Kiwis
 
 ====Derived terms====
 {{top2}}
