--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -63,10 +63,10 @@
 # [[southwest]]
 
 ====Readings====
-* {{ja-readings
+{{ja-readings
 |goon=こん
 |kanon=こん
-|kun=[[つち]] (tsuchi), [[ひつじさる]] (hitsujisaru)}}
+|kun=つち-, ひつじさる-}}
 
 ===Etymology===
 {{compound|ja|未|tr1=hitsuji|申|tr2=saru}}
